--- a/action.yml
+++ b/action.yml
@@ -9,10 +9,21 @@ branding:
 
 # Define your inputs here.
 inputs:
-  milliseconds:
-    description: Your input description here
+  model:
+    description: The model to use
+    required: false
+  prompt:
+    description: The prompt to use
+    required: false
+  api-url:
+    description: The API URL. Defaults to openai.com
+    required: false
+  api-key:
+    description: The API key
     required: true
-    default: '1000'
+  github-token:
+    description: The GitHub token
+    required: true
 
 # Define your outputs here.
 outputs:
